# Druid-Engine

./: ..gitignore.un~  .Makefile.swp  .clang-format  .gitignore  .gitignore~  .ninja_deps  .ninja_log  CLAUDE.md  CMakeLists.txt  INSTALL.txt  Makefile  README.md  build.ninja  druid_msvc.def  generate_msvc_import_lib.cmake  generate_msvc_lib.bat
Editor/: CMakeLists.txt  Makefile  projects.conf
Editor/res/: FBOShader.frag  FBOShader.vert  Glow.frag  Glow.vert  Skybox.frag  Skybox.vert  arrow.frag  arrow.vert  bloom_blur.frag  bloom_bright.frag  bloom_bright.vert  bloom_composite.frag  deferred_lighting.frag  deferred_lighting.vert  eMapping.frag  eMapping.vert  fogShader.frag  fogShader.vert  idShader.frag  idShader.vert  noise.frag  noise.vert  postprocess.frag  postprocess.vert  shader.frag  shader.vert  shaderGeoText.frag  shaderGeoText.geom  shaderGeoText.vert
Editor/src/: MeshMap.cpp  MeshMap.h  ShaderMap.h  editor.cpp  editor.h  entitypicker.cpp  entitypicker.h  hub.cpp  hub.h  main.cpp  project_builder.cpp  project_builder.h  scene.cpp  scene.h
include/: druid.h
src/: defines.h  stb_image.c
src/application/: .application.h.swp  application.c  application.cpp  application.h  resourcemanager.c
src/core/: arena.c  arena.cpp  arena.h  buffer.c  coroutine.cpp  coroutine.h  dllloader.c  file.c  hashmap.c  hashmap.cpp  hashmap.h  input.c  input.cpp  input.h  keys.h  logging.c  math.c  math.cpp  maths.h  obj_loader.c  obj_loader.h  objloader.c  platform.c  profiler.c  simd.c  transform.c  transform.cpp  transform.h  vmem.c
src/systems/: runtime.c
src/systems/Physics/: broadphase.c  collider.c  collider.cpp  collider.h  contact.c  narrowphase.c  physics.c  rigidbody.c
src/systems/Rendering/: camera.c  camera.cpp  camera.h  display.c  display.cpp  display.h  framebuffer.c  gbuffer.c  gbuffers.c  geometrybuffer.c  gizmo.c  graphics.h  indirectbuffer.c  instancebuffer.c  material.c  mesh.c  mesh.cpp  mesh.h  model.c  modelssbo.c  renderer.c  shader.c  shader.cpp  shader.h  ssbo.c  texture.c  texture.cpp  texture.h  ubo.c
src/systems/WorldModel/: ECS.c  ECS.cpp  ECS.h
src/systems/audio/: audio.c
src/systems/ecs/: archetype.c  ecssystem.c  entityarena.c  prefab.c  scene.c
src/systems/world model/: archetype.c  ecssystem.c  entityarena.c  scene.c
testbed/: .Makefile.swp  CMakeLists.txt  Makefile
testbed/res/: Lighting.frag  Lighting.vert  Toon.vert  bump.frag  bump.vert  fog.frag  fog.vert  shader.frag  shader.vert  terrain.comp  terrain.frag  terrain.vert  warble.frag  warble.vert  water.frag  water.vert
testbed/res/Models/: Buildings.mtl
testbed/scenes/: default.scene
testbed/src/: .main.cpp.swk  .main.cpp.swl  .main.cpp.swm  .main.cpp.swn  .main.cpp.swp  .notes.txt.swn  main.cpp  notes.txt  terrain.h
